[gd_scene load_steps=3 format=2]

[ext_resource path="res://Asset/level.tres" type="DynamicFont" id=1]
[ext_resource path="res://Asset/Scripts/GameOverUI.gd" type="Script" id=2]

[node name="GameOverUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="GameOverPanel" type="ColorRect" parent="."]
margin_left = 112.0
margin_top = 856.0
margin_right = 480.0
margin_bottom = 1032.0
color = Color( 0.980392, 1, 0.396078, 1 )

[node name="RetryBtn" type="Button" parent="GameOverPanel"]
margin_left = 208.0
margin_top = 112.0
margin_right = 320.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 1 )
text = "重来"

[node name="BackBtn" type="Button" parent="GameOverPanel"]
margin_left = 48.0
margin_top = 112.0
margin_right = 160.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 1 )
text = "主菜单"

[node name="TimeLabel" type="Label" parent="GameOverPanel"]
margin_left = 24.0
margin_top = 56.0
margin_right = 160.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 1 )
text = "耗时：00"

[node name="MissLabel" type="Label" parent="GameOverPanel"]
margin_left = 192.0
margin_top = 56.0
margin_right = 328.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 1 )
text = "失误：00"

[node name="TipText" type="Label" parent="GameOverPanel"]
margin_left = 112.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
text = "通过检测"
